objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>CIS_ID__c</fullName>
        <formula>Contact.Account.CIS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CIS ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone_Number__c</fullName>
        <label>Contact Phone Number</label>
        <length>20</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Contact_Position__c</fullName>
        <formula>TEXT( Contact.Contact_Position__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Position</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <formula>Contact.Account.Name_Surname_TH__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TM_Name__c</fullName>
        <formula>CreatedBy.TM_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TM Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <formula>CreatedBy.Team_Name__c</formula>
        <label>Team</label>
        <type>Text</type>
    </fields>
</CustomObject>